# MagicSquare_1004

./: .cursorrules  .gitignore  AGENTS.md  README.md  pyproject.toml
.cursor/commands/: export-session.md  export.md  golden-master.md  green-minimal.md  red-skeleton.md  red-test-plan.md  refactor-safe.md  refactor-smell.md  tdd-red.md
Report/: 001-arrr-t2-validate-lines.md  006-arrr-d-loc-01-entity.md  010-arrr-gm-u-in-01-golden.md
docs/: PRD.md  c2c-dual-track-concepts.md  github-push-guide.md  learning-guide.md  mom-test-guide.md  test-plan.md
docs/Report/: 002-arrr-t1-validate-lines.md  003-arrr-t3-validate-lines.md  004-arrr-u-in-01-boundary.md  005-arrr-u-in-02-boundary.md  007-arrr-test-plan-backlog.md  008-arrr-c-flow-02-control.md  009-arrr-gm-t2-golden.md  011-arrr-u-in-04-boundary.md  012-arrr-d-hint-02-entity.md  013-arrr-green-to-main-merge.md
docs/spec/: c_flow_01.md  c_flow_02.md  d_hint_01.md  d_hint_02.md  d_loc_01.md  u_in_01.md  u_in_02.md  u_in_03.md  u_in_04.md  validate_lines.md
src/boundary/: error_codes.py  flask_app.py  grid_input.py  grid_parser.py
src/control/: grid_analysis.py
src/entity/: constants.py  find_blank_coords.py  hint_one_cell.py  validate_lines.py
tests/: _approval.py  conftest.py
tests/boundary/: test_u_in_01_none_grid_returns_e003.py  test_u_in_02_out_of_range_cell_returns_e004.py  test_u_in_03_duplicate_cell_returns_e005.py  test_u_in_04_wrong_grid_size_returns_e006.py
tests/control/: test_c_flow_01_partial_grid_analysis.py  test_c_flow_02_none_grid_returns_e003.py
tests/golden/: d_loc_01_approved.txt  (+2 more)
(+7 files in other folders)
