[project]
name = "magic-square"
version = "0.1.0"
description = "4×4 마방진 — TDD·ECB 학습 프로젝트"
readme = "AGENTS.md"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["pytest>=8.0"]
web = ["flask>=3.0"]

[project.scripts]
magic-square-web = "src.boundary.flask_app:main"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
